--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,38 @@
 version: "3.8"
 services:
   mongo-1:
-    image: mongo:4 
+    image: mongo:4
+    networks:
+      - mongodb
     volumes:
-      - ./rs.js:/rs.js
+      - type: bind
+        source: ./rs.js
+        target: /rs.js
+      - type: volume
+        source: mongo-1-data
+        target: /data/db
     command: --replSet testRS
   mongo-2:
     image: mongo:4
+    networks:
+      - mongodb
+    volumes:
+      - type: volume
+        source: mongo-2-data
+        target: /data/db
     command: --replSet testRS
   mongo-3:
     image: mongo:4
+    networks:
+      - mongodb
+    volumes:
+      - type: volume
+        source: mongo-3-data
+        target: /data/db
     command: --replSet testRS
+networks:
+  mongodb:
+volumes:
+  mongo-1-data:
+  mongo-2-data:
+  mongo-3-data:
